Non-technical Manual Added

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Throw pigs off to fly</h1>
+    <h1>Image Captioning Model</h1>
 
     <form method = 'POST' enctype="multipart/form-data">
         {{form.hidden_tag()}} <!--this protects against CSRF attacks-->
